Fixed mobile overflow in itemgroup

--- a/website/src/app/itemgroup/itemgroup.component.scss
+++ b/website/src/app/itemgroup/itemgroup.component.scss
@@ -1,5 +1,6 @@
 .size-box {
   width: 48px;
+  min-width: 48px;
   height: 48px;
   text-align: center;
   border-left: 1px solid rgba(0, 0, 0, 0.125);
